# PicFactory

./: CMakeLists.txt  README.md  main.cpp  widget.cpp
Model/: imageProcessing.cpp  imageProcessing.h  pathProcessing.cpp  pathProcessing.h  tagProcessing.cpp  tagProcessing.h
UI/: Canvas.cpp  Canvas.h  Layout.cpp  Layout.h  MainWindow.cpp  MainWindow.h
